just added some styles

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>git </title>
+    <title>Document </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+    <h2>Hello</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus magnam minus explicabo accusantium voluptates iusto illum ipsa molestias similique labore nihil facilis consequuntur dolorum, cum mollitia, sunt harum qui itaque.
+    </p>
+    </div>
 </body>
 </html>
